stop dropdown option from wrapping text

--- a/pyrene/src/components/DropdownButton/optionsItem.css
+++ b/pyrene/src/components/DropdownButton/optionsItem.css
@@ -27,4 +27,6 @@
   background-color: var(--neutral-030);
 }
 
-
+.optionLabel {
+  white-space: nowrap;
+}
